Adding changes for identity service, and updating rentalmoviescontroller in order to manage getmovies queries

--- a/src/RentalMovies.Presentation/appsettings.json
+++ b/src/RentalMovies.Presentation/appsettings.json
@@ -14,5 +14,16 @@
     "Secret": "abcdefghijklmnopqrstuvwxyz",
     "TokenLifetime": "00:00:45"
   },
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 465,
+    "SmtpUsername": "ever1509@gmail.com",
+    "SmtpPassword": "Tester01!",
+
+    "PopServer": "popserver",
+    "PopPort": 995,
+    "PopUsername": "popusername",
+    "PopPassword": "poppassword"
+  },
   "AllowedHosts": "*"
 }
