--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/RentalMovies.sln
+
+# Ignore folder generated for Rider IDE
+.idea/
